# anvilnote-doc

./: .env.example  .gitignore  Makefile  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest.config.ts
data/legal/privacy/: en.md  ja.md  ko.md  ru.md  th.md  zh-TW.md
data/legal/terms/: en.md  ja.md  ko.md  ru.md  th.md  zh-TW.md
docs/: features.ja.md  features.ko.md  features.md  features.ru.md  features.th.md  features.zh-TW.md  getting-started.ja.md  getting-started.ko.md  getting-started.md  getting-started.ru.md  getting-started.th.md  getting-started.zh-TW.md  index.ja.md  index.ko.md  index.md  index.ru.md  index.th.md  index.zh-TW.md
docs/stylesheets/: extra.css
i18n/: en.json  ja.json  ko.json  ru.json  th.json  zh-TW.json
messages/: ko.json  ru.json  th.json
src/: proxy.ts
src/app/: globals.css  not-found.tsx  sitemap.ts
src/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/components/admin/: admin-dashboard.tsx
src/components/app/: locale-switcher.tsx  not-found-content.tsx  theme-toggle.tsx
src/components/feedback/: feedback-board.tsx  feedback-form.tsx  feedback-markdown.tsx  feedback-status-badge.tsx  image-crop-dialog.tsx  markdown-editor.tsx  markdown-toolbar.tsx
src/components/landing/: demo-video.tsx  download-buttons.test.tsx  (+13 more)
src/lib/: latest-release.ts  seo.ts  view-transition.ts
supabase/: schema.sql
supabase/migrations/: 002_add_category.sql  003_create_feedback_images_bucket.sql  004_add_title_name_status.sql  005_add_locale.sql
(+46 files in other folders)
