[tool.poetry]
name = "anvilnote-doc"
version = "0.1.0"
description = "Documentation site for AnvilNote"
authors = ["AnvilNote"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5"
mkdocs-static-i18n = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
